@@ -620,10 +620,415 @@
 		</permanentEnemyToEveryoneExcept>
 		<raidCommonalityFromPointsCurve Inherit="false">
 			<points>
-				<li>(10,  0.1)</li>
-				<li>(8000, 0.3)</li>
+				<li>(10,  0)</li>
+				<li>(8000, 0)</li>
 			</points>
 		</raidCommonalityFromPointsCurve>
+		<pawnGroupMakers Inherit="false">
+			<!-- 초기일반 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>80</commonality>
+			<maxTotalPoints>2500</maxTotalPoints>
+			<disallowedStrategies>
+				<li>ImmediateAttackSappers</li>
+				<li>Siege</li>
+			</disallowedStrategies>
+			<options>
+				<AT_Raid_A>75</AT_Raid_A>
+				<AT_Rifle_A>25</AT_Rifle_A>
+			</options> 
+		</li>
+		
+			<!-- 일반 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>80</commonality>
+			<maxTotalPoints>3500</maxTotalPoints>
+			<disallowedStrategies>
+				<li>ImmediateAttackSappers</li>
+			</disallowedStrategies>
+			<options>
+				<AT_Raid_A>50</AT_Raid_A>
+				<AT_Rifle_A>25</AT_Rifle_A>
+				<AT_Charge_A>25</AT_Charge_A>
+			</options> 
+		</li>
+
+			<!-- 정규 근거리 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>30</commonality>
+			<maxTotalPoints>5000</maxTotalPoints>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Raid_A>10</AT_Raid_A>
+				<AT_Rifle_A>10</AT_Rifle_A>
+				<AT_Charge_A>40</AT_Charge_A>
+				<Anty_Commander_title>5</Anty_Commander_title>
+				<AT_Charge_B>30</AT_Charge_B>
+				<AT_Launcher_B>5</AT_Launcher_B>
+			</options> 
+		</li>
+
+			<!-- 정규 원거리 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>30</commonality>
+			<maxTotalPoints>5000</maxTotalPoints>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Raid_A>10</AT_Raid_A>
+				<AT_Rifle_A>40</AT_Rifle_A>
+				<Anty_Commander_title>5</Anty_Commander_title>
+				<AT_Sapper_A>5</AT_Sapper_A>
+				<AT_Rifle_B_title>30</AT_Rifle_B_title>
+				<AT_Launcher_A_title>5</AT_Launcher_A_title>
+				<AT_Launcher_B>5</AT_Launcher_B>
+			</options> 
+		</li>
+
+			<!-- 정규 혼합 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>30</commonality>
+			<maxTotalPoints>5000</maxTotalPoints>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Raid_A>10</AT_Raid_A>
+				<AT_Rifle_A>20</AT_Rifle_A>
+				<AT_Charge_A>20</AT_Charge_A>
+				<Anty_Commander_title>5</Anty_Commander_title>
+				<AT_Sapper_A>5</AT_Sapper_A>
+				<AT_Rifle_B_title>15</AT_Rifle_B_title>
+				<AT_Charge_B>15</AT_Charge_B>
+				<AT_Launcher_A_title>5</AT_Launcher_A_title>
+				<AT_Launcher_B>5</AT_Launcher_B>
+			</options> 
+		</li>
+
+			<!-- 정규-화력강화 근거리 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>20</commonality>
+			<maxTotalPoints>7000</maxTotalPoints>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<Anty_Commander_title>5</Anty_Commander_title>
+				<AT_Sapper_A>5</AT_Sapper_A>
+				<AT_Sapper_B>5</AT_Sapper_B>
+				<AT_Charge_B>80</AT_Charge_B>
+				<AT_Launcher_B>5</AT_Launcher_B>
+			</options> 
+		</li>
+
+			<!-- 정규-화력강화 원거리 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>20</commonality>
+			<maxTotalPoints>7000</maxTotalPoints>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<Anty_Commander_title>5</Anty_Commander_title>
+				<AT_Sapper_A>5</AT_Sapper_A>
+				<AT_Sapper_B>5</AT_Sapper_B>
+				<AT_Rifle_B_title>80</AT_Rifle_B_title>
+				<AT_Launcher_A_title>5</AT_Launcher_A_title>
+			</options> 
+		</li>
+
+			<!-- 정규-화력강화 혼합 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>20</commonality>
+			<maxTotalPoints>7000</maxTotalPoints>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<Anty_Commander_title>5</Anty_Commander_title>
+				<AT_Sapper_A>5</AT_Sapper_A>
+				<AT_Sapper_B>5</AT_Sapper_B>
+				<AT_Rifle_B_title>40</AT_Rifle_B_title>
+				<AT_Charge_B>40</AT_Charge_B>
+				<AT_Launcher_A_title>5</AT_Launcher_A_title>
+			</options> 
+		</li>
+
+			<!-- 정규-중앙드랍, 브리칭 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>10</commonality>
+			<disallowedStrategies>
+				<li>Siege</li>
+				<li>ImmediateAttack</li>
+				<li>ImmediateAttackSmart</li>
+				<li>StageThenAttack</li>
+			</disallowedStrategies>
+			<options>
+				<Anty_Commander_title>5</Anty_Commander_title>
+				<AT_Sapper_A>5</AT_Sapper_A>
+				<AT_Sapper_B>5</AT_Sapper_B>
+				<AT_Rifle_B_title>35</AT_Rifle_B_title>
+				<AT_Charge_B>40</AT_Charge_B>
+				<AT_Launcher_A_title>5</AT_Launcher_A_title>
+				<AT_Launcher_B>5</AT_Launcher_B>
+				<AT_PP_S_title>1</AT_PP_S_title>
+			</options> 
+		</li>
+		
+			<!-- 정규-중앙드랍 -->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>15</commonality>
+			<disallowedStrategies>
+				<li>Siege</li>
+				<li>ImmediateAttack</li>
+				<li>ImmediateAttackSmart</li>
+				<li>StageThenAttack</li>
+				<li>ImmediateAttackSappers</li>
+			</disallowedStrategies>
+			<options>
+				<Anty_Commander_title>5</Anty_Commander_title>
+				<AT_Charge_B>20</AT_Charge_B>
+				<AT_Rifle_B_title>70</AT_Rifle_B_title>
+				<AT_Launcher_A_title>5</AT_Launcher_A_title>
+			</options> 
+		</li>
+		
+			<!-- 전차화 습격 1단계 근거리-->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>5</commonality>
+			<maxTotalPoints>8500</maxTotalPoints>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Charge_B>70</AT_Charge_B>
+				<AT_Power_B>20</AT_Power_B>
+				<AT_Launcher_B>5</AT_Launcher_B>
+				<Anty_Commander_title>5</Anty_Commander_title>
+			</options> 
+		</li>
+
+			<!-- 전차화 습격 1단계 원거리-->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>5</commonality>
+			<maxTotalPoints>8500</maxTotalPoints>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Rifle_B_title>70</AT_Rifle_B_title>
+				<AT_Power>20</AT_Power>
+				<AT_Launcher_A_title>5</AT_Launcher_A_title>
+				<Anty_Commander_title>5</Anty_Commander_title>
+			</options> 
+		</li>
+
+			<!-- 전차화 습격 1단계 혼합-->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>5</commonality>
+			<maxTotalPoints>8500</maxTotalPoints>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Rifle_B_title>35</AT_Rifle_B_title>
+				<AT_Charge_B>35</AT_Charge_B>
+				<AT_Power_B>10</AT_Power_B>
+				<AT_Power>10</AT_Power>
+				<AT_Launcher_B>5</AT_Launcher_B>
+				<Anty_Commander_title>5</Anty_Commander_title>
+			</options> 
+		</li>
+
+			<!-- 전차화 습격 2단계 근거리-->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>3</commonality>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Charge_B>20</AT_Charge_B>
+				<AT_Power_A_B>10</AT_Power_A_B>
+				<AT_Power_A_C>10</AT_Power_A_C>
+				<AT_Power_B>50</AT_Power_B>
+				<AT_Launcher_B>5</AT_Launcher_B>
+				<Anty_Commander_title>5</Anty_Commander_title>
+			</options> 
+		</li>
+
+			<!-- 전차화 습격 2단계 원거리-->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>3</commonality>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Rifle_B_title>10</AT_Rifle_B_title>
+				<AT_Power>10</AT_Power>
+				<AT_Power_A>50</AT_Power_A>
+				<AT_Power_A_B>10</AT_Power_A_B>
+				<AT_Launcher_A_title>10</AT_Launcher_A_title>
+				<AT_Launcher_B>5</AT_Launcher_B>
+				<Anty_Commander_title>5</Anty_Commander_title>
+			</options> 
+		</li>
+
+			<!-- 전차화 습격 2단계 혼합-->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>3</commonality>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Rifle_B_title>10</AT_Rifle_B_title>
+				<AT_Power>10</AT_Power>
+				<AT_Power_A>25</AT_Power_A>
+				<AT_Power_A_B>5</AT_Power_A_B>
+				<AT_Power_A_C>5</AT_Power_A_C>
+				<AT_Power_B>25</AT_Power_B>
+				<AT_Launcher_A_title>10</AT_Launcher_A_title>
+				<AT_Launcher_B>5</AT_Launcher_B>
+				<Anty_Commander_title>5</Anty_Commander_title>
+			</options> 
+		</li>
+
+			<!-- 전차화 습격 3단계 근거리-->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>1</commonality>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Power_A_B>30</AT_Power_A_B>
+				<AT_Power_A_C>10</AT_Power_A_C>
+				<AT_Power_B>50</AT_Power_B>
+				<AT_Power_C>5</AT_Power_C>
+				<Anty_Commander_title>5</Anty_Commander_title>
+			</options> 
+		</li>
+	
+			<!-- 전차화 습격 3단계 원거리-->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>1</commonality>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Power_A>50</AT_Power_A>
+				<AT_Power_A_B>30</AT_Power_A_B>
+				<AT_Power_A_C>10</AT_Power_A_C>
+				<AT_Power_C>5</AT_Power_C>
+				<Anty_Commander_title>5</Anty_Commander_title>
+			</options> 
+		</li>
+
+			<!-- 전차화 습격 3단계 혼합-->
+		<li> 
+			<kindDef>Combat</kindDef>
+			<commonality>1</commonality>
+			<disallowedStrategies>
+			</disallowedStrategies>
+			<options>
+				<AT_Power_B>25</AT_Power_B>
+				<AT_Power_A>25</AT_Power_A>
+				<AT_Power_A_B>30</AT_Power_A_B>
+				<AT_Power_A_C>10</AT_Power_A_C>
+				<AT_Power_C>5</AT_Power_C>
+				<Anty_Commander_title>5</Anty_Commander_title>
+			</options> 
+		</li>
+
+		<li>
+			<kindDef>Settlement</kindDef>
+			<maxTotalPoints>5500</maxTotalPoints>
+			<options>
+				<AT_Rifle_B_title>10</AT_Rifle_B_title>
+				<AT_Launcher_A_title>10</AT_Launcher_A_title>
+				<AT_Launcher_B>10</AT_Launcher_B>
+				<AT_Charge_B>50</AT_Charge_B>
+				<AT_SingleUse>10</AT_SingleUse>
+			</options>
+		</li>
+
+		<li>
+			<kindDef>Settlement</kindDef>
+			<options>
+				<AT_Rifle_B>10</AT_Rifle_B>
+				<AT_Launcher_A>5</AT_Launcher_A>
+				<AT_Launcher_B>5</AT_Launcher_B>
+				<AT_Charge_B>10</AT_Charge_B>
+				<AT_Power>5</AT_Power>
+				<AT_Power_A>10</AT_Power_A>
+				<AT_Power_A_B>10</AT_Power_A_B>
+				<AT_Power_A_C>10</AT_Power_A_C>
+				<AT_Power_B>10</AT_Power_B>
+				<AT_Power_C>5</AT_Power_C>
+				<Anty_Commander_title>5</Anty_Commander_title>
+				<AT_SingleUse>5</AT_SingleUse>
+				<AT_Dreadnought_A>5</AT_Dreadnought_A>
+			</options>
+		</li>
+
+		<li>
+			<kindDef>Settlement</kindDef>
+			<options>
+				<AT_Power_A_B>20</AT_Power_A_B>
+				<AT_Power_A_C>20</AT_Power_A_C>
+				<AT_Power_B>40</AT_Power_B>
+				<AT_Power_C>10</AT_Power_C>
+				<AT_Dreadnought_A>10</AT_Dreadnought_A>
+			</options>
+		</li>
+
+		<li>
+			<kindDef>Settlement</kindDef>
+			<options>
+				<AT_Launcher_B>10</AT_Launcher_B>
+				<AT_Power_A>40</AT_Power_A>
+				<AT_Power_A_B>20</AT_Power_A_B>
+				<AT_Power_A_C>20</AT_Power_A_C>
+				<AT_Power_C>5</AT_Power_C>
+				<AT_Dreadnought_A>5</AT_Dreadnought_A>
+			</options>
+		</li>
+		
+		<li>
+			<kindDef>Peaceful</kindDef>
+			<options>
+				<AT_Charge_B>15</AT_Charge_B>
+				<AT_Rifle_B_title>20</AT_Rifle_B_title>
+				<AT_Charge_A>15</AT_Charge_A>
+				<AT_Rifle_A>20</AT_Rifle_A>
+			</options>
+		</li>
+	  
+		<li>
+        <kindDef>Trader</kindDef>
+			<traders>
+				<Anty_Commander_title>1</Anty_Commander_title>
+			</traders>
+			<carriers>
+				<Elephant>6</Elephant>
+				<Muffalo>6</Muffalo>
+				<Dromedary>5</Dromedary>
+			</carriers>
+			<guards>
+				<AT_Charge_B>40</AT_Charge_B>
+				<AT_Rifle_B_title>20</AT_Rifle_B_title>
+				<AT_Charge_A>15</AT_Charge_A>
+				<AT_Rifle_A>20</AT_Rifle_A>
+				<AT_SingleUse>3</AT_SingleUse>
+				<AT_Raid_A>1</AT_Raid_A>
+			</guards>
+		</li>
+		</pawnGroupMakers>
 	</FactionDef>
 	
 	<ThingSetMakerDef>
