@@ -26,4 +26,8 @@
   <AT_Launcher_B.label>Anty Launcher Shooter</AT_Launcher_B.label>
   <AT_Power_A_B.label>Anty Enhanced Ranged Infantry</AT_Power_A_B.label>
   <AT_Power_A_C.label>Anty Enhanced Ranged Infantry</AT_Power_A_C.label>
+  <AT_Rifle_B_title.label>Anty Ranged infantry</AT_Rifle_B_title.label>
+  <AT_PP_S_title.label>Anty Special diplomat</AT_PP_S_title.label>
+  <Anty_Commander_title.label>Anty Commander</Anty_Commander_title.label>
+  <AT_Launcher_A_title.label>Anty Launcher Shooter</AT_Launcher_A_title.label>
 </LanguageData>
