@@ -27,4 +27,8 @@
   <Anty_prototype_E.label>프로티</Anty_prototype_E.label>
   <AT_Dreadnought_A.label>앤티 드레드노트</AT_Dreadnought_A.label>
   <AT_Dreadnought_B.label>앤티 드레드노트</AT_Dreadnought_B.label>
+  <AT_Rifle_B_title.label>앤티 원거리 보병</AT_Rifle_B_title.label>
+  <AT_PP_S_title.label>앤티 특별 외교관</AT_PP_S_title.label>
+  <Anty_Commander_title.label>앤티 지휘관</Anty_Commander_title.label>
+  <AT_Launcher_A_title.label>앤티 유탄사수</AT_Launcher_A_title.label>
 </LanguageData>
